--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "updater-proyect",
   "version": "1.0.0",
   "main": "index.js",
+  "homepage": "https://github.com/VMASPAD/updater-proyect",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vmaspad/updater-proyect"
+  },
   "scripts": {
     "start": "node index.js"
   },
